<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginActivityHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityHeadline"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="32dp" />


    <TextView
        android:id="@+id/loginActivityUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityUsername" />

    <EditText
        android:id="@+id/loginActivityUsernamePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/loginActivityUsernamePlaceholder" />


    <TextView
        android:id="@+id/loginActivityPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityPassword" />

    <EditText
        android:id="@+id/loginActivityPasswordPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/loginActivityPasswordPlaceholder" />


    <TextView
        android:id="@+id/loginActivityEmailProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityEmailProvider" />

    <Spinner
        android:id="@+id/loginActivityEmailProviderList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/loginActivityEmailProviderList" />


    <Button
        android:id="@+id/loginActivityButtonAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/generalAbort" />


    <Button
        android:id="@+id/loginActivityButtonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/generalSend" />


</androidx.constraintlayout.widget.ConstraintLayout>