<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20px">

    <TextView
        android:id="@+id/loginActivityHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityHeadline"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="32dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/loginActivityUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/loginActivityUsername" />

                <EditText
                    android:id="@+id/loginActivityUsernamePlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/loginActivityUsernamePlaceholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/loginActivityPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/loginActivityPassword" />

                <EditText
                    android:id="@+id/loginActivityPasswordPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/loginActivityPasswordPlaceholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/loginActivityEmailProvider"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loginActivityEmailProvider" />

                <Spinner
                    android:id="@+id/loginActivityEmailProviderList"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:entries="@array/loginActivityEmailProviderList" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="8">

                <Button
                    android:id="@+id/loginActivityButtonAbort"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="3"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/generalAbort" />


                <Button
                    android:id="@+id/loginActivityButtonSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="3"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/generalSend" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>