<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <Toolbar
        android:id="@+id/viewActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/viewActivitySubject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="10"
        android:text="@string/viewActivitySubject"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewActivityFrom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="8"
        android:text="@string/viewActivityFrom"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewActivityTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="82"
        android:text="@string/viewActivityTextContent" />
</LinearLayout>