<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/x1ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/xmlUebung0ActivityUsernameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/xmlUebung0ActivityUsernameText"
        app:layout_constraintEnd_toStartOf="@+id/xmlUebung0ActivityUsernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/xmlUebung0ActivityUsernameInput" />

    <EditText
        android:id="@+id/xmlUebung0ActivityUsernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:hint="@string/xmlUebung0ActivityUsernameInput"
        app:layout_constraintBottom_toTopOf="@+id/xmlUebung0ActivityPhoneNoInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/xmlUebung0ActivityUsernameText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/xmlUebung0ActivityPhoneNoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/xmlUebung0ActivityPhoneNoText"
        app:layout_constraintEnd_toStartOf="@+id/xmlUebung0ActivityPhoneNoInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/xmlUebung0ActivityPhoneNoInput" />

    <EditText
        android:id="@+id/xmlUebung0ActivityPhoneNoInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:hint="@string/xmlUebung0ActivityPhoneNoInput"
        app:layout_constraintBottom_toTopOf="@+id/xmlUebung0ActivityEmailIdInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/xmlUebung0ActivityPhoneNoText"
        app:layout_constraintTop_toBottomOf="@+id/xmlUebung0ActivityUsernameInput" />


    <TextView
        android:id="@+id/xmlUebung0ActivityEmailIdText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/xmlUebung0ActivityEmailIdText"
        app:layout_constraintEnd_toStartOf="@+id/xmlUebung0ActivityEmailIdInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/xmlUebung0ActivityEmailIdInput" />

    <EditText
        android:id="@+id/xmlUebung0ActivityEmailIdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="2"
        android:hint="@string/xmlUebung0ActivityEmailIdInput"
        app:layout_constraintBottom_toTopOf="@+id/xmlUebung0ActivityButtonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/xmlUebung0ActivityEmailIdText"
        app:layout_constraintTop_toBottomOf="@+id/xmlUebung0ActivityPhoneNoInput" />


    <Button
        android:id="@+id/xmlUebung0ActivityButtonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="32dp"
        android:layout_weight="4"
        android:background="@android:color/holo_green_light"
        android:text="@string/xmlUebung0ActivityButtonCancel"
        app:layout_constraintEnd_toStartOf="@+id/xmlUebung0ActivityButtonSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xmlUebung0ActivityEmailIdInput" />

    <Button
        android:id="@+id/xmlUebung0ActivityButtonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="4"
        android:background="@android:color/holo_green_light"
        android:text="@string/xmlUebung0ActivityButtonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/xmlUebung0ActivityButtonCancel"
        app:layout_constraintTop_toBottomOf="@+id/xmlUebung0ActivityEmailIdInput" />


</androidx.constraintlayout.widget.ConstraintLayout>