<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/composeActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="90">

    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="@android:color/white"
        android:id="@+id/composeActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/composeActivityFromText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/composeActivityFrom" />

        <EditText
            android:id="@+id/composeActivityFromInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/composeActivityToText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/composeActivityTo" />

        <EditText
            android:id="@+id/composeActivityToInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75" />
    </LinearLayout>

    <EditText
        android:id="@+id/composeActivitySubjectInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="8"
        android:hint="@string/composeActivitySubject" />


    <EditText
        android:id="@+id/composeActivityTextContentInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="66"
        android:gravity="top"
        android:hint="@string/composeActivityTextContent" />

</LinearLayout>